--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
       <div class="promo__inner">
         <h1 class="title">LAMBORGHINI SUPER TROFEO</h1>
         <h2 class="subtitle">Гранд-финал 2022
-        <span>3-6 ноября </span>
+        <span>3-6 ноября</span>
       </h2>
-      <p class="promo_title">автодром Портимао,Португалия</p>
+      <p class="promo__text">автодром Портимао,Португалия</p>
+      <a href="#" class="promo__arrow">
+        <img src="images/arrow.svg" alt="">
+      </a>
       </div>
     </div>
   </section>
