--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
         <h3 class="info__title">СУПЕР ТРОФЕО МИРОВОЙ ФИНАЛ</h3>
         <div class="info__part-textbox">
           <p class="info__text">Мировой финал Lamborghini завершает каждый сезон Super Trofeo с 2013 года. Каждый год гонщики всех континентальных чемпионатов отправляются на разные трассы и принимают участие в двух 50-минутных спринтерских гонках, где определяется победитель в общем зачете. как чемпион мира Lamborghini. Мировой финал Lamborghini — это не только крупнейший гоночный уик-энд года, но и настоящий фестиваль автоспорта, который привлекает поклонников со всего мира.
-
           </p>
           <b class="info__text">Парад владельцев, превью и развлечения в паддоке для болельщиков — это лишь некоторые из мероприятий, организованных в рамках мероприятия.
           </b>
@@ -150,7 +149,7 @@
             </div>
           </div>
           <img src="images/evo.png" alt="" class="evo-black__img">
-          <dl class="evo-__descr-list">
+          <dl class="evo__descr-list">
             <div>
             <dd>ПЕРЕМЕЩЕНИЕ</dd>
             <dt>5204 см³</dt>
@@ -191,6 +190,61 @@
       </div>
     </div>
   </section>
+  <section class="review">
+    <div class="container">
+      <div class="review">
+        <div class="review__content">
+          <div class="review__content review__content-first">
+            <h3 class="review__title">Чемпион Am</h3>
+            <h3 class="review__subtitle">Анджей Левандовски</h3>
+            <p class="review__text">«Я очень доволен титулом, моей второй победой в Am и четвертой в Super Trofeo, мне очень приятно делать это в этом году, потому что уровень соревнований очень высок. Должен сказать, сегодня было довольно легко, так как я все время контролировал ситуацию».</p>
+          </div>
+          <div class="review__content review__content-second">
+            <h3 class="review__title">Обладатель кубка Lamborghini</h3>
+            <h3 class="review__subtitle">Жерар ван дер Хорст</h3>
+            <p class="review__text">«Я очень доволен титулом, моей второй победой в Am и четвертой в Super Trofeo, мне очень приятно делать это в этом году, потому что уровень соревнований очень высок. Должен Обладатель кубка Lamborghini  добавил: «Здорово выиграть титул, спустя четыре года после последнего, а за это время произошло так много всего. Из-за COVID-19, а затем моей тяжелой аварии в Барселоне я не мог так много ездить в последние годы, поэтому я очень доволен своим возвращением. Сегодня утром была тяжелая гонка, но я справился». сказать, сегодня было довольно легко, так как я все время контролировал ситуацию».</p>
+          </div>
+        </div>
+        <img src="images/review.png" alt="" class="review-img">
+      </div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__contacts">
+        <div class="footer__contacts-base">
+          <h3 class="footer__contacts-title">Общие</h3>
+          <a class="footer__contacts-tel" href="tel:+351282405600">+(351) 282 405 600</a>
+          <a class="footer__contacts-tel" href="tel:+351282405697">+(351) 282 405 697</a>
+          <a href="mailto:info@autodromodoalgarve.com">info@autodromodoalgarve.com</a>
+        </div>
+        <div class="footer__contacts-tickets">
+          <h3 class="footer__contacts-title">Билеты</h3>
+          <a class="footer__contacts-tel" href="tel:+351282405600">+(351) 282 405 600</a>
+          <a href="mailto:tickets@autodromodoalgarve.com">tickets@autodromodoalgarve.com</a>
+        </div>
+        <div class="footer__social">
+          <a href="#" class="footer__social-link">
+            <img src="images/youtube.svg" alt="youtube">
+          </a>
+          <a href="#" class="footer__social-link">
+            <img src="images/inst.svg" alt="youtube">
+          </a>
+          <a href="#" class="footer__social-link">
+            <img src="images/facebook.svg" alt="youtube">
+          </a>
+        </div>
+      </div>
+      <div class="footer__adress">
+        <h3 class="footer__adress-title">АДРЕС</h3>
+        <p class="footer__adress-text">Sitio do Escampadinho, Mexilhoeira Grande, 8500-148 Portimao, Portugal</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d12706.63553696189!2d-8.634752588685101!3d37.23207192748689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sSitio%20do%20Escampadinho%2C%20Mexilhoeira%20Grande%2C%208500-148%20Portimao%2C%20Portugal!5e0!3m2!1sru!2str!4v1669013570026!5m2!1sru!2str" width="454" height="253" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="footer__map"></div>
+      <div class="footer__footer-logo"></div>
+    </div>
+  </footer>
 </main>
   <script src="js/main.js"></script>
 </body>
