--- a/index.html
+++ b/index.html
@@ -207,42 +207,53 @@
         </div>
         <img src="images/review.png" alt="" class="review-img">
       </div>
-      </div>
     </div>
   </section>
   <footer class="footer">
     <div class="container">
-      <div class="footer__contacts">
-        <div class="footer__contacts-base">
-          <h3 class="footer__contacts-title">Общие</h3>
-          <a class="footer__contacts-tel" href="tel:+351282405600">+(351) 282 405 600</a>
-          <a class="footer__contacts-tel" href="tel:+351282405697">+(351) 282 405 697</a>
-          <a href="mailto:info@autodromodoalgarve.com">info@autodromodoalgarve.com</a>
+      <h1 class="footer__big-title">Контакты</h1> 
+      <div class="footer__main">
+        <div class="footer__contacts">
+          <div class="footer__contacts-base">
+            <h3 class="footer__title">Общие</h3>
+            <ul>
+              <li class="contacts__item"><a href="tel:+351282405600">+(351) 282 405 600</a></li>
+              <li class="contacts__item"><a  href="tel:+351282405697">+(351) 282 405 697</a></li>
+              <li class="contacts__item"><a href="mailto:info@autodromodoalgarve.com">info@autodromodoalgarve.com</a></li>
+            </ul>
+          </div>
+          <div class="footer__contacts-tickets">
+            <h3 class="footer__title">Билеты</h3>
+            <ul>
+              <li class="contacts__item"><a href="tel:+351282405600">+(351) 282 405 600</a></li>
+              <li class="contacts__item"><a href="mailto:tickets@autodromodoalgarve.com">tickets@autodromodoalgarve.com</a></li>
+            </ul>
+          </div>
+          <div class="footer__social">
+            <a href="#" class="footer__social-link">
+              <img src="images/youtube.svg" alt="youtube">
+            </a>
+            <a href="#" class="footer__social-link">
+              <img src="images/inst.svg" alt="youtube">
+            </a>
+            <a href="#" class="footer__social-link">
+              <img src="images/facebook.svg" alt="youtube">
+            </a>
+          </div>
         </div>
-        <div class="footer__contacts-tickets">
-          <h3 class="footer__contacts-title">Билеты</h3>
-          <a class="footer__contacts-tel" href="tel:+351282405600">+(351) 282 405 600</a>
-          <a href="mailto:tickets@autodromodoalgarve.com">tickets@autodromodoalgarve.com</a>
+        <div class="footer__adress">
+          <h3 class="footer__title">АДРЕС</h3>
+          <p class="contacts__item">Sitio do Escampadinho, Mexilhoeira Grande, 8500-148 Portimao, Portugal</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d12706.63553696189!2d-8.634752588685101!3d37.23207192748689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sSitio%20do%20Escampadinho%2C%20Mexilhoeira%20Grande%2C%208500-148%20Portimao%2C%20Portugal!5e0!3m2!1sru!2str!4v1669013570026!5m2!1sru!2str" width="454" height="253" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="footer__social">
-          <a href="#" class="footer__social-link">
-            <img src="images/youtube.svg" alt="youtube">
-          </a>
-          <a href="#" class="footer__social-link">
-            <img src="images/inst.svg" alt="youtube">
-          </a>
-          <a href="#" class="footer__social-link">
-            <img src="images/facebook.svg" alt="youtube">
-          </a>
-        </div>
+    </div>
+      <div class="footer__copyright">
+        <a class="footer__copyright-text" href="#">Design by Varvara Prokopchuk</a>
+        <a href="#" class="logo">
+          <img class = "logo-img" src="images/footer-logo.svg" alt="logo">
+        </a>
+        <a class="footer__copyright-text" href="#">Политика конфиденциальности</a>
       </div>
-      <div class="footer__adress">
-        <h3 class="footer__adress-title">АДРЕС</h3>
-        <p class="footer__adress-text">Sitio do Escampadinho, Mexilhoeira Grande, 8500-148 Portimao, Portugal</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d12706.63553696189!2d-8.634752588685101!3d37.23207192748689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sSitio%20do%20Escampadinho%2C%20Mexilhoeira%20Grande%2C%208500-148%20Portimao%2C%20Portugal!5e0!3m2!1sru!2str!4v1669013570026!5m2!1sru!2str" width="454" height="253" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-      <div class="footer__map"></div>
-      <div class="footer__footer-logo"></div>
     </div>
   </footer>
 </main>
